--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@ body
     /*font-family: 'Bebas Neue','Segoe UI', Verdana, Geneva, Tahoma, sans-serif;*/
     font-weight:300;
 }
+ul
+{
+    /*list-style:georgian;*/
+    list-style:georgian;
+    
+}
+ol
+{
+list-style:upper-roman;
+}
 figure
 {
     text-align:center;
