--- a/JavaScript/events/style.css
+++ b/JavaScript/events/style.css
@@ -59,3 +59,34 @@ input
     width: 400px;
     height: 300px;
 }
+
+#display
+{
+    border:solid 1px;
+    margin:10px;
+    padding:10px;
+    display:flex;
+    justify-content:space-around;
+}
+
+.time-block
+{
+    border:solid 3px;
+    border-radius:10px;
+    width:148px;
+    box-shadow:0px 0px 5px 5px gray;
+}
+.time-unit
+{
+    font-size:48px;
+    color:rgb(200,0,0);
+    width:148px;
+    height:148px;
+    background-color:Highlight;
+}
+.time-marker
+{
+    border:solid 1px;
+    background-color:darkred;
+    color:aliceblue;
+}
